# babysitter

./: .env.example  .gitignore  .mcp.json  AGENT_SDK_MIGRATION.md  CHANGELOG.md  FRONTEND_INTEGRATION.md  IMPLEMENTATION_COMPLETE.md  NOTION_DB_SETUP.md  NOTION_WEBHOOK_SETUP.md  QUICK_START.md  README.md  SHORTCUT_SETUP.md  TDD_PROGRESS.md  TODO.md  WEBSOCKET_DEBUG_REPORT.md  WEBSOCKET_TEST_RESULTS.md  check_conversation.py  check_pending_tickets.py  check_tickets.py  find_notion_db.py  first_prompt.txt  hello_date.py  integrateThis.html  integrateThis.jsx  launch-babysitter-claude.bat  main.py  mcp-config.json  new_prompt.txt  pyproject.toml  rwLOOP.sh  test.txt  test_agent_direct.py  test_blocks_storage.py  test_manual.py  test_websocket.py  test_websocket_broadcast.py  test_websocket_broadcast_real.py  test_websocket_debug.py  test_websocket_simple.py
dashboard/: README.md  start_dashboard.sh
dashboard/backend/: app.py  requirements.txt
dashboard/frontend/: index.html  package-lock.json  package.json
frontend/: index.html
scripts/: cleanup_tickets.py  get_or_create_session.py  notion_mcp.py  notion_mcp_server.py  preload.py  resume_poll.py
scripts/utils/: __init__.py  logging.py  notion_client.py
src/: __init__.py  agent.py  notion_helper.py  webhook_server.py
src/hooks/: __init__.py  post_tool_use.py  session_start.py  (+1 more)
tests/: conftest.py  test_agent.py  test_file_cleanup.py  test_hooks_post_tool.py  test_hooks_session.py  test_hooks_user_prompt.py  test_logging.py  test_metadata_extraction.py  test_notion_helper.py  test_webhook_server.py
(+3 files in other folders)
